@@ -33,6 +33,7 @@ version <next>:
 - OSQ demuxer and decoder
 - Support HEVC,VP9,AV1 codec fourcclist in enhanced rtmp protocol
 - CRI USM demuxer
+- ffmpeg CLI '-top' option deprecated in favor of the setfield filter
 
 
 version 6.0:
